--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-cheerio": "^1.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-replace": "^1.1.3",
     "gulp-sass": "^5.1.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify": "^3.0.2",
