--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "gulp-imagemin": "^7.1.0",
     "install": "^0.13.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.0.7"
   }
 }
