--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "gulp-imagemin": "^7.1.0",
     "install": "^0.13.0",
+    "magnific-popup": "^1.1.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.0.7"
   }
